quizy api initialized
